polish readme